--- a/htdocs/_styleguide/category/components/expander/index.html
+++ b/htdocs/_styleguide/category/components/expander/index.html
@@ -39,7 +39,7 @@
             <div class="uk-scope">
               <h2 id="expander" class="uk-h2">expander</h2>
             </div>
-            <div class="aigis-module__filepath">../_src/htdocs/assets/css/partials/components/_1_expander.styl</div>
+            <div class="aigis-module__filepath">../_src/htdocs/css/partials/components/_1_expander.styl</div>
             <div class="uk-scope">
               <nav data-uk-margin>
 <a href="../../../tag/base/index.html" class="tm-inline-block tm-line-height-reset uk-link-reset"><span class="uk-label uk-label-base">base</span></a>
@@ -90,7 +90,7 @@
           </div>
         </article>
       </main>
-      <footer class="aigis-footer">Last update at 2020/03/09</footer>
+      <footer class="aigis-footer">Last update at 2020/03/29</footer>
     </div>
     <div id="offcanvas-slide" uk-offcanvas class="uk-offcanvas uk-scope">
       <div class="uk-offcanvas-bar">
@@ -99,7 +99,7 @@
             <div class="uk-container">
               <h2 class="uk-h2">CATEGORIES</h2>
               <nav>
-                <div class="uk-list uk-list-divider tm-collection-tree"><ul data-path-depth="0"><li data-path-depth="0"><a href="../../../category/components/index.html">components</a><ul data-path-depth="1"><li data-path-depth="1"><a href="../../../category/components/accordion/index.html">accordion</a></li><li data-path-depth="1"><a href="../../../category/components/ellipsis/index.html">ellipsis</a></li><li data-path-depth="1"><a href="../../../category/components/expander/index.html" data-tree-current>expander</a></li><li data-path-depth="1"><a href="../../../category/components/intersection/index.html">intersection</a></li><li data-path-depth="1"><a href="../../../category/components/modal/index.html">modal</a></li><li data-path-depth="1"><a href="../../../category/components/tab/index.html">tab</a></li></ul></li></ul>
+                <div class="uk-list uk-list-divider tm-collection-tree"><ul data-path-depth="0"><li data-path-depth="0"><a href="../../../category/components/index.html">components</a><ul data-path-depth="1"><li data-path-depth="1"><a href="../../../category/components/accordion/index.html">accordion</a></li><li data-path-depth="1"><a href="../../../category/components/ellipsis/index.html">ellipsis</a></li><li data-path-depth="1"><a href="../../../category/components/expander/index.html" data-tree-current>expander</a></li><li data-path-depth="1"><a href="../../../category/components/icon/index.html">icon</a></li><li data-path-depth="1"><a href="../../../category/components/intersection/index.html">intersection</a></li><li data-path-depth="1"><a href="../../../category/components/modal/index.html">modal</a></li><li data-path-depth="1"><a href="../../../category/components/tab/index.html">tab</a></li></ul></li></ul>
                 </div>
               </nav>
               <h2 class="uk-h2">TAG</h2>
