--- a/htdocs/_styleguide/category/components/icon/index.html
+++ b/htdocs/_styleguide/category/components/icon/index.html
@@ -29,7 +29,7 @@
           <nav class="uk-scope">
             <h2 class="uk-h2"><span>COMPONENTS</span></h2>
             <ul class="uk-list uk-list-bullet">
-              <li><a href="#ellipsis" class="uk-link-reset">ellipsis</a></li>
+              <li><a href="#icon" class="uk-link-reset">icon</a></li>
             </ul>
           </nav>
           <div class="uk-scope">
@@ -37,9 +37,9 @@
           </div>
           <div class="aigis-module">
             <div class="uk-scope">
-              <h2 id="ellipsis" class="uk-h2">ellipsis</h2>
+              <h2 id="icon" class="uk-h2">icon</h2>
             </div>
-            <div class="aigis-module__filepath">../_src/htdocs/css/partials/components/_1_ellipsis.styl</div>
+            <div class="aigis-module__filepath">../_src/htdocs/css/partials/components/_0_icon.styl</div>
             <div class="uk-scope">
               <nav data-uk-margin>
 <a href="../../../tag/base/index.html" class="tm-inline-block tm-line-height-reset uk-link-reset"><span class="uk-label uk-label-base">base</span></a>
@@ -49,21 +49,16 @@
 <a href="../../../tag/js/index.html" class="tm-inline-block tm-line-height-reset uk-link-reset"><span class="uk-label uk-label-js">js</span></a>
 <a href="../../../tag/data/index.html" class="tm-inline-block tm-line-height-reset uk-link-reset"><span class="uk-label uk-label-data">data</span></a>
               </nav>
-            </div><p>ellipsis styles</p>
+            </div><p>icon styles</p>
 <ul>
-<li>Base ellipsis style.</li>
-<li>Resize not compatible.</li>
-<li>Use [data-ellipsis].</li>
+<li>Base icon style.</li>
 </ul>
 <div class="aigis-preview site-base">
-  <p data-ellipsis> text text text text text text text text text text text text text text text text text text text text text text text text text text text </p></div>
+  </div>
 
-<pre><code class="language-html"><span class="token tag" ><span class="token tag" ><span class="token punctuation" >&lt;</span>p</span> <span class="token attr-name" >data-ellipsis</span><span class="token punctuation" >></span></span>
-  text text text text text text text text text text text text text text text text text text text text text text text text text text text
-<span class="token tag" ><span class="token tag" ><span class="token punctuation" >&lt;/</span>p</span><span class="token punctuation" >></span></span>
+<pre><code class="language-html">
 </code></pre>
-<pre><code class="language-jade"><span class="token tag" >p<span class="token attributes" ><span class="token punctuation" >(</span><span class="token attr-name" >data-ellipsis</span><span class="token punctuation" >=</span><span class="token attr-value" >`<span class="token punctuation" >{</span><span class="token string" >"lineLimit"</span><span class="token punctuation" >:</span> <span class="token number" >2</span></span><span class="token punctuation" >,</span> "ellipsisLabel": "続きをみる"}`<span class="token punctuation" >)</span></span></span>
-  <span class="token punctuation" >|</span> text text text text text text text text text text text text text text text text text text text text text text text text text text text
+<pre><code class="language-jade">
 </code></pre>
 
           </div>
@@ -78,7 +73,7 @@
             <div class="uk-container">
               <h2 class="uk-h2">CATEGORIES</h2>
               <nav>
-                <div class="uk-list uk-list-divider tm-collection-tree"><ul data-path-depth="0"><li data-path-depth="0"><a href="../../../category/components/index.html">components</a><ul data-path-depth="1"><li data-path-depth="1"><a href="../../../category/components/accordion/index.html">accordion</a></li><li data-path-depth="1"><a href="../../../category/components/ellipsis/index.html" data-tree-current>ellipsis</a></li><li data-path-depth="1"><a href="../../../category/components/expander/index.html">expander</a></li><li data-path-depth="1"><a href="../../../category/components/icon/index.html">icon</a></li><li data-path-depth="1"><a href="../../../category/components/intersection/index.html">intersection</a></li><li data-path-depth="1"><a href="../../../category/components/modal/index.html">modal</a></li><li data-path-depth="1"><a href="../../../category/components/tab/index.html">tab</a></li></ul></li></ul>
+                <div class="uk-list uk-list-divider tm-collection-tree"><ul data-path-depth="0"><li data-path-depth="0"><a href="../../../category/components/index.html">components</a><ul data-path-depth="1"><li data-path-depth="1"><a href="../../../category/components/accordion/index.html">accordion</a></li><li data-path-depth="1"><a href="../../../category/components/ellipsis/index.html">ellipsis</a></li><li data-path-depth="1"><a href="../../../category/components/expander/index.html">expander</a></li><li data-path-depth="1"><a href="../../../category/components/icon/index.html" data-tree-current>icon</a></li><li data-path-depth="1"><a href="../../../category/components/intersection/index.html">intersection</a></li><li data-path-depth="1"><a href="../../../category/components/modal/index.html">modal</a></li><li data-path-depth="1"><a href="../../../category/components/tab/index.html">tab</a></li></ul></li></ul>
                 </div>
               </nav>
               <h2 class="uk-h2">TAG</h2>
