--- a/htdocs/_styleguide/category/components/index.html
+++ b/htdocs/_styleguide/category/components/index.html
@@ -29,6 +29,7 @@
           <nav class="uk-scope">
             <h2 class="uk-h2"><span>COMPONENTS</span></h2>
             <ul class="uk-list uk-list-bullet">
+              <li><a href="#icon" class="uk-link-reset">icon</a></li>
               <li><a href="#accordion" class="uk-link-reset">accordion</a></li>
               <li><a href="#ellipsis" class="uk-link-reset">ellipsis</a></li>
               <li><a href="#expander" class="uk-link-reset">expander</a></li>
@@ -42,9 +43,39 @@
           </div>
           <div class="aigis-module">
             <div class="uk-scope">
+              <h2 id="icon" class="uk-h2">icon</h2>
+            </div>
+            <div class="aigis-module__filepath">../_src/htdocs/css/partials/components/_0_icon.styl</div>
+            <div class="uk-scope">
+              <nav data-uk-margin>
+<a href="../../tag/base/index.html" class="tm-inline-block tm-line-height-reset uk-link-reset"><span class="uk-label uk-label-base">base</span></a>
+<a href="../../tag/latest/index.html" class="tm-inline-block tm-line-height-reset uk-link-reset"><span class="uk-label uk-label-latest">latest</span></a>
+<a href="../../tag/pc/index.html" class="tm-inline-block tm-line-height-reset uk-link-reset"><span class="uk-label uk-label-pc">pc</span></a>
+<a href="../../tag/sp/index.html" class="tm-inline-block tm-line-height-reset uk-link-reset"><span class="uk-label uk-label-sp">sp</span></a>
+<a href="../../tag/js/index.html" class="tm-inline-block tm-line-height-reset uk-link-reset"><span class="uk-label uk-label-js">js</span></a>
+<a href="../../tag/data/index.html" class="tm-inline-block tm-line-height-reset uk-link-reset"><span class="uk-label uk-label-data">data</span></a>
+              </nav>
+            </div><p>icon styles</p>
+<ul>
+<li>Base icon style.</li>
+</ul>
+<div class="aigis-preview site-base">
+  </div>
+
+<pre><code class="language-html">
+</code></pre>
+<pre><code class="language-jade">
+</code></pre>
+
+          </div>
+          <div class="uk-scope">
+            <hr class="uk-margin-large">
+          </div>
+          <div class="aigis-module">
+            <div class="uk-scope">
               <h2 id="accordion" class="uk-h2">accordion</h2>
             </div>
-            <div class="aigis-module__filepath">../_src/htdocs/assets/css/partials/components/_1_accordion.styl</div>
+            <div class="aigis-module__filepath">../_src/htdocs/css/partials/components/_1_accordion.styl</div>
             <div class="uk-scope">
               <nav data-uk-margin>
 <a href="../../tag/base/index.html" class="tm-inline-block tm-line-height-reset uk-link-reset"><span class="uk-label uk-label-base">base</span></a>
@@ -99,7 +130,7 @@
             <div class="uk-scope">
               <h2 id="ellipsis" class="uk-h2">ellipsis</h2>
             </div>
-            <div class="aigis-module__filepath">../_src/htdocs/assets/css/partials/components/_1_ellipsis.styl</div>
+            <div class="aigis-module__filepath">../_src/htdocs/css/partials/components/_1_ellipsis.styl</div>
             <div class="uk-scope">
               <nav data-uk-margin>
 <a href="../../tag/base/index.html" class="tm-inline-block tm-line-height-reset uk-link-reset"><span class="uk-label uk-label-base">base</span></a>
@@ -134,7 +165,7 @@
             <div class="uk-scope">
               <h2 id="expander" class="uk-h2">expander</h2>
             </div>
-            <div class="aigis-module__filepath">../_src/htdocs/assets/css/partials/components/_1_expander.styl</div>
+            <div class="aigis-module__filepath">../_src/htdocs/css/partials/components/_1_expander.styl</div>
             <div class="uk-scope">
               <nav data-uk-margin>
 <a href="../../tag/base/index.html" class="tm-inline-block tm-line-height-reset uk-link-reset"><span class="uk-label uk-label-base">base</span></a>
@@ -190,7 +221,7 @@
             <div class="uk-scope">
               <h2 id="intersection" class="uk-h2">intersection</h2>
             </div>
-            <div class="aigis-module__filepath">../_src/htdocs/assets/css/partials/components/_1_intersection.styl</div>
+            <div class="aigis-module__filepath">../_src/htdocs/css/partials/components/_1_intersection.styl</div>
             <div class="uk-scope">
               <nav data-uk-margin>
 <a href="../../tag/base/index.html" class="tm-inline-block tm-line-height-reset uk-link-reset"><span class="uk-label uk-label-base">base</span></a>
@@ -227,7 +258,7 @@
             <div class="uk-scope">
               <h2 id="modal" class="uk-h2">modal</h2>
             </div>
-            <div class="aigis-module__filepath">../_src/htdocs/assets/css/partials/components/_1_modal.styl</div>
+            <div class="aigis-module__filepath">../_src/htdocs/css/partials/components/_1_modal.styl</div>
             <div class="uk-scope">
               <nav data-uk-margin>
 <a href="../../tag/base/index.html" class="tm-inline-block tm-line-height-reset uk-link-reset"><span class="uk-label uk-label-base">base</span></a>
@@ -284,7 +315,7 @@
             <div class="uk-scope">
               <h2 id="tab" class="uk-h2">tab</h2>
             </div>
-            <div class="aigis-module__filepath">../_src/htdocs/assets/css/partials/components/_1_tab.styl</div>
+            <div class="aigis-module__filepath">../_src/htdocs/css/partials/components/_1_tab.styl</div>
             <div class="uk-scope">
               <nav data-uk-margin>
 <a href="../../tag/base/index.html" class="tm-inline-block tm-line-height-reset uk-link-reset"><span class="uk-label uk-label-base">base</span></a>
@@ -345,7 +376,7 @@
           </div>
         </article>
       </main>
-      <footer class="aigis-footer">Last update at 2020/03/09</footer>
+      <footer class="aigis-footer">Last update at 2020/03/29</footer>
     </div>
     <div id="offcanvas-slide" uk-offcanvas class="uk-offcanvas uk-scope">
       <div class="uk-offcanvas-bar">
@@ -354,7 +385,7 @@
             <div class="uk-container">
               <h2 class="uk-h2">CATEGORIES</h2>
               <nav>
-                <div class="uk-list uk-list-divider tm-collection-tree"><ul data-path-depth="0"><li data-path-depth="0"><a href="../../category/components/index.html" data-tree-current>components</a><ul data-path-depth="1"><li data-path-depth="1"><a href="../../category/components/accordion/index.html">accordion</a></li><li data-path-depth="1"><a href="../../category/components/ellipsis/index.html">ellipsis</a></li><li data-path-depth="1"><a href="../../category/components/expander/index.html">expander</a></li><li data-path-depth="1"><a href="../../category/components/intersection/index.html">intersection</a></li><li data-path-depth="1"><a href="../../category/components/modal/index.html">modal</a></li><li data-path-depth="1"><a href="../../category/components/tab/index.html">tab</a></li></ul></li></ul>
+                <div class="uk-list uk-list-divider tm-collection-tree"><ul data-path-depth="0"><li data-path-depth="0"><a href="../../category/components/index.html" data-tree-current>components</a><ul data-path-depth="1"><li data-path-depth="1"><a href="../../category/components/accordion/index.html">accordion</a></li><li data-path-depth="1"><a href="../../category/components/ellipsis/index.html">ellipsis</a></li><li data-path-depth="1"><a href="../../category/components/expander/index.html">expander</a></li><li data-path-depth="1"><a href="../../category/components/icon/index.html">icon</a></li><li data-path-depth="1"><a href="../../category/components/intersection/index.html">intersection</a></li><li data-path-depth="1"><a href="../../category/components/modal/index.html">modal</a></li><li data-path-depth="1"><a href="../../category/components/tab/index.html">tab</a></li></ul></li></ul>
                 </div>
               </nav>
               <h2 class="uk-h2">TAG</h2>
