--- a/htdocs/assets/css/style.css
+++ b/htdocs/assets/css/style.css
@@ -352,94 +352,130 @@
   max-width: 100%;
 }
 @media (max-width: 375px) {
-  .layout-sp .site-base {
+  .layout-sp .site-base .site-wrapper {
     font-size: 13px;
   }
 }
 @media (min-width: 375px) {
-  .layout-sp .site-base {
+  .layout-sp .site-base .site-wrapper {
     font-size: 13px;
   }
 }
 @media (min-width: 400px) {
-  .layout-sp .site-base {
+  .layout-sp .site-base .site-wrapper {
     font-size: 14px;
   }
 }
 @media (min-width: 425px) {
-  .layout-sp .site-base {
+  .layout-sp .site-base .site-wrapper {
     font-size: 15px;
   }
 }
 @media (min-width: 450px) {
-  .layout-sp .site-base {
+  .layout-sp .site-base .site-wrapper {
     font-size: 16px;
   }
 }
 @media (min-width: 475px) {
-  .layout-sp .site-base {
+  .layout-sp .site-base .site-wrapper {
     font-size: 16px;
   }
 }
 @media (min-width: 500px) {
-  .layout-sp .site-base {
+  .layout-sp .site-base .site-wrapper {
     font-size: 17px;
   }
 }
 @media (min-width: 525px) {
-  .layout-sp .site-base {
+  .layout-sp .site-base .site-wrapper {
     font-size: 18px;
   }
 }
 @media (min-width: 550px) {
-  .layout-sp .site-base {
+  .layout-sp .site-base .site-wrapper {
     font-size: 19px;
   }
 }
 @media (min-width: 575px) {
-  .layout-sp .site-base {
+  .layout-sp .site-base .site-wrapper {
     font-size: 20px;
   }
 }
 @media (min-width: 600px) {
-  .layout-sp .site-base {
+  .layout-sp .site-base .site-wrapper {
     font-size: 21px;
   }
 }
 @media (min-width: 625px) {
-  .layout-sp .site-base {
+  .layout-sp .site-base .site-wrapper {
     font-size: 22px;
   }
 }
 @media (min-width: 650px) {
-  .layout-sp .site-base {
+  .layout-sp .site-base .site-wrapper {
     font-size: 23px;
   }
 }
 @media (min-width: 675px) {
-  .layout-sp .site-base {
+  .layout-sp .site-base .site-wrapper {
     font-size: 23px;
   }
 }
 @media (min-width: 700px) {
-  .layout-sp .site-base {
+  .layout-sp .site-base .site-wrapper {
     font-size: 24px;
   }
 }
 @media (min-width: 725px) {
-  .layout-sp .site-base {
+  .layout-sp .site-base .site-wrapper {
     font-size: 25px;
   }
 }
 @media (min-width: 750px) {
-  .layout-sp .site-base {
+  .layout-sp .site-base .site-wrapper {
     font-size: 26px;
   }
 }
 @media (min-width: 751px) {
-  .layout-pc .site-base {
+  .layout-pc .site-base .site-wrapper {
     font-size: 16px;
   }
+}
+@font-face {
+  font-weight: normal;
+  font-style: normal;
+  font-family: 'icons1';
+  src: url("../font/icons1.eot");
+  src: url("../font/icons1.eot?#iefix") format('embedded-opentype'), url("../font/icons1.woff2") format('woff2'), url("../font/icons1.woff") format('woff'), url("../font/icons1.ttf") format('truetype');
+}
+.site-base .site-wrapper .site-icon {
+  display: inline-block;
+  margin-right: 0.3em;
+  margin-left: 0.3em;
+  vertical-align: middle;
+  line-height: 0;
+
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+.site-base .site-wrapper .site-icon ~ .site-icon__text {
+  display: inline-block;
+  vertical-align: middle;
+}
+.site-base .site-wrapper .site-icon--arrow1::before {
+  display: inline;
+  overflow: hidden;
+  content: '\F001';
+  vertical-align: middle;
+  text-transform: none;
+  font-weight: normal;
+  font-style: normal;
+  font-variant: normal;
+  font-family: 'icons1';
+  line-height: 1;
+
+  speak: none;
+  text-rendering: auto;
 }
 .site-base .site-wrapper .site-accordion_button > a {
   display: block;
